fix: gif alignment

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ input{
 
 #loading-img{
     display: none;
-    margin-left: 6rem;
+    margin: auto;
 }
 
 #output{
